1. Подключbk к проекту кодогенератор по openapi.yaml (go tool oapi-codegen) 2. К router.go подключены все ручки бизнес слоя /api/ 3. К router.go подключены swagger ручки /swagger/actuator/ + /swagger/api/ + /swagger/openapi.json 4. Документация
