# internal/transport/http/handler/user/models_gen.go
@@ -1,0 +1,243 @@
+// Package userapi provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
+package userapi
+
+import (
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
+// Defines values for AccessTokenRequestGrantType.
+const (
+	AuthorizationCode AccessTokenRequestGrantType = "authorization_code"
+)
+
+// Defines values for InitiateOAuthAuthorizationParamsResponseType.
+const (
+	Code InitiateOAuthAuthorizationParamsResponseType = "code"
+)
+
+// Defines values for InitiateOAuthAuthorizationParamsCodeChallengeMethod.
+const (
+	S256 InitiateOAuthAuthorizationParamsCodeChallengeMethod = "S256"
+)
+
+// AccessTokenRequest Запрос на токен доступа
+type AccessTokenRequest struct {
+	// ClientId Уникальный идентификатор приложения
+	ClientId string `json:"client_id"`
+
+	// Code Код авторизации, который необходимо обменять на токен.
+	Code string `json:"code"`
+
+	// CodeVerifier Оригинальный проверочный код (PKCE).
+	CodeVerifier string `json:"code_verifier"`
+
+	// GrantType Код стратегии, которую нужно использовать при обмене кода авторизации на токен.
+	GrantType AccessTokenRequestGrantType `json:"grant_type"`
+
+	// RedirectUri URI, который ранее указывался в запросе /oauth/authorize с целью проверки на сервере авторизации
+	RedirectUri string `json:"redirect_uri"`
+}
+
+// AccessTokenRequestGrantType Код стратегии, которую нужно использовать при обмене кода авторизации на токен.
+type AccessTokenRequestGrantType string
+
+// AccessTokenResponse Ответ с токеном доступа
+type AccessTokenResponse struct {
+	// AccessToken Токен доступа, который приложение может использовать для доступа к ресурсам пользователя.
+	AccessToken string `json:"access_token"`
+
+	// ExpiresIn Срок действия токена в секундах.
+	ExpiresIn int `json:"expires_in"`
+
+	// TokenType Тип токена.
+	TokenType string `json:"token_type"`
+}
+
+// ErrorCause Описание причины ошибки
+type ErrorCause struct {
+	// Error Краткое, понятное человеку, описание
+	Error *string `json:"error,omitempty"`
+
+	// Field Ошибочное поле
+	Field *string `json:"field,omitempty"`
+}
+
+// ErrorResponse defines model for ErrorResponse.
+type ErrorResponse struct {
+	Causes *[]ErrorCause `json:"causes,omitempty"`
+
+	// Details Подробное, понятное человеку, описание проблемы
+	Details *string `json:"details,omitempty"`
+
+	// Error Краткое, понятное человеку, описание проблемы
+	Error string `json:"error"`
+
+	// Status Числовой код ошибочного ответа
+	Status int32 `json:"status"`
+
+	// Timestamp Время ошибки
+	Timestamp string `json:"timestamp"`
+}
+
+// Login Описание учетной записи пользователя
+type Login struct {
+	// Password Пароль
+	Password string `json:"password"`
+
+	// Username Имя пользователя
+	Username string `json:"username"`
+}
+
+// User Описание пользователя
+type User struct {
+	// Email Email
+	Email string `json:"email"`
+
+	// FirstName Имя пользователя
+	FirstName string `json:"firstName"`
+
+	// LastName Фамилия пользователя
+	LastName string `json:"lastName"`
+
+	// MiddleName Отчество пользователя
+	MiddleName *string `json:"middleName,omitempty"`
+}
+
+// UserFull defines model for UserFull.
+type UserFull struct {
+	// Email Email
+	Email string `json:"email"`
+
+	// FirstName Имя пользователя
+	FirstName string `json:"firstName"`
+
+	// LastName Фамилия пользователя
+	LastName string `json:"lastName"`
+
+	// Login Описание учетной записи пользователя
+	Login *Login `json:"login,omitempty"`
+
+	// MiddleName Отчество пользователя
+	MiddleName *string `json:"middleName,omitempty"`
+}
+
+// UserIdInfo Информация об идентификаторе пользователя
+type UserIdInfo struct {
+	// Active Состояние пользователя:
+	// * true - пользователь активен
+	// * false - пользователь не активен (заблокирован)
+	Active *bool `json:"active,omitempty"`
+
+	// Id Id пользователя
+	Id string `json:"id"`
+}
+
+// Jwk defines model for jwk.
+type Jwk struct {
+	// Alg Алгоритм шифрования
+	Alg *string `json:"alg,omitempty"`
+
+	// E Показатель открытой экспоненты
+	E *string `json:"e,omitempty"`
+
+	// Kid Уникальный идентификатор ключа
+	Kid *string `json:"kid,omitempty"`
+
+	// Kty Тип ключа (например, RSA)
+	Kty *string `json:"kty,omitempty"`
+
+	// N Модуль ключа
+	N *string `json:"n,omitempty"`
+
+	// Use Назначение ключа (например, sig для подписи)
+	Use *string `json:"use,omitempty"`
+}
+
+// Username defines model for username.
+type Username = string
+
+// XRequestId defines model for x-request-id.
+type XRequestId = openapi_types.UUID
+
+// InitiateOAuthAuthorizationParams defines parameters for InitiateOAuthAuthorization.
+type InitiateOAuthAuthorizationParams struct {
+	// ResponseType Тип ответа. Используйте "code" для Authorization Code Flow
+	ResponseType InitiateOAuthAuthorizationParamsResponseType `form:"response_type" json:"response_type"`
+
+	// ClientId Уникальный идентификатор приложения
+	ClientId string `form:"client_id" json:"client_id"`
+
+	// RedirectUri URI, куда будет направлен код авторизации после успешной аутентификации пользователя
+	RedirectUri string `form:"redirect_uri" json:"redirect_uri"`
+
+	// Scope Область доступа (scope). Определяет, к каким ресурсам приложение запрашивает доступ
+	Scope string `form:"scope" json:"scope"`
+
+	// State Необязательный параметр для предотвращения атаки CSRF
+	State *string `form:"state,omitempty" json:"state,omitempty"`
+
+	// CodeChallengeMethod Способ шифрования, которым был зашифрован проверочный код (PKCE).
+	CodeChallengeMethod *InitiateOAuthAuthorizationParamsCodeChallengeMethod `form:"code_challenge_method,omitempty" json:"code_challenge_method,omitempty"`
+
+	// CodeChallenge Зашифрованный проверочный код (PKCE).
+	CodeChallenge *string `form:"code_challenge,omitempty" json:"code_challenge,omitempty"`
+}
+
+// InitiateOAuthAuthorizationParamsResponseType defines parameters for InitiateOAuthAuthorization.
+type InitiateOAuthAuthorizationParamsResponseType string
+
+// InitiateOAuthAuthorizationParamsCodeChallengeMethod defines parameters for InitiateOAuthAuthorization.
+type InitiateOAuthAuthorizationParamsCodeChallengeMethod string
+
+// LoginUserParams defines parameters for LoginUser.
+type LoginUserParams struct {
+	// Code Код авторизации, полученный в результате запроса /oauth/authorize
+	Code string `form:"code" json:"code"`
+}
+
+// CreateUserFullParams defines parameters for CreateUserFull.
+type CreateUserFullParams struct {
+	// Code Код авторизации, полученный в результате запроса /oauth/authorize
+	Code *string `form:"code,omitempty" json:"code,omitempty"`
+
+	// XRequestID Уникальный идентификатор запроса
+	XRequestID XRequestId `json:"X-Request-ID"`
+}
+
+// DeleteUserByUsernameParams defines parameters for DeleteUserByUsername.
+type DeleteUserByUsernameParams struct {
+	// XRequestID Уникальный идентификатор запроса
+	XRequestID XRequestId `json:"X-Request-ID"`
+}
+
+// GetUserByUsernameParams defines parameters for GetUserByUsername.
+type GetUserByUsernameParams struct {
+	// XRequestID Уникальный идентификатор запроса
+	XRequestID XRequestId `json:"X-Request-ID"`
+}
+
+// UpdateUserByUsernameParams defines parameters for UpdateUserByUsername.
+type UpdateUserByUsernameParams struct {
+	// XRequestID Уникальный идентификатор запроса
+	XRequestID XRequestId `json:"X-Request-ID"`
+}
+
+// RestoreUserByUsernameParams defines parameters for RestoreUserByUsername.
+type RestoreUserByUsernameParams struct {
+	// XRequestID Уникальный идентификатор запроса
+	XRequestID XRequestId `json:"X-Request-ID"`
+}
+
+// LoginUserJSONRequestBody defines body for LoginUser for application/json ContentType.
+type LoginUserJSONRequestBody = Login
+
+// ExchangeAuthorizationCodeFormdataRequestBody defines body for ExchangeAuthorizationCode for application/x-www-form-urlencoded ContentType.
+type ExchangeAuthorizationCodeFormdataRequestBody = AccessTokenRequest
+
+// CreateUserFullJSONRequestBody defines body for CreateUserFull for application/json ContentType.
+type CreateUserFullJSONRequestBody = UserFull
+
+// UpdateUserByUsernameJSONRequestBody defines body for UpdateUserByUsername for application/json ContentType.
+type UpdateUserByUsernameJSONRequestBody = User
